[gd_scene load_steps=6 format=3 uid="uid://ddiwbas4pouv1"]

[ext_resource type="Script" path="res://minigames/generics/bouncing_bubbles.gd" id="1_2om56"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_dit3d"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qj82a"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_64hwl"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_335rd"]

[node name="BouncingBubbles" type="Node2D"]
script = ExtResource("1_2om56")

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="Border" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("SegmentShape2D_dit3d")

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="Border" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("SegmentShape2D_qj82a")

[node name="TopWall" type="StaticBody2D" parent="."]

[node name="Border" type="CollisionShape2D" parent="TopWall"]
shape = SubResource("SegmentShape2D_64hwl")

[node name="BottomWall" type="StaticBody2D" parent="."]

[node name="Border" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource("SegmentShape2D_335rd")
